testing svg overflow fix for mobile

--- a/ClassPortal/styles.css
+++ b/ClassPortal/styles.css
@@ -35,7 +35,7 @@ nav ul {
 
 svg {
     margin: auto;
-    overflow-clip-margin: 5px;
+    overflow-clip-margin: 10px;
 }
 
 #ellipse {
